[package]
name = "user-clouds-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
clap = { version = "4", features = ["derive"] }
mendes = { version = "0.1.4", features = ["application", "with-http-body", "with-hyper"] }
oauth2 = "4.3.0"
reqwest = "0.11.13"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.1.1", features = ["macros"] }
url = "2.3.1"
