[package]
name = "user-clouds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
oauth2 = "4.3.0"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.1.1", features = ["macros"] }
